# ModelBasedConching

./: LICENSE.md
ConchingModel/: disabledsetup.py.disabled  requirements.txt  setup.cfg
ConchingModel/src/ConchingModel/: AnalysisLib.py  ConcheClass.py  DataLoaders.py  DifferentiationModules.py  DimensionlessNumbers.py  Experiment.py  GPR.py  OptimizerClass.py  PhysicalProcessParameters.py  VisualizerClass.py  mbdoe.py
ConchingModel/src/ConchingModel/Data/: MetaData.py  SimData.py  Timeseries.py
ConchingModel/src/ConchingModel/GUI/: gui.py  gui_lib.py
ConchingModel/src/ConchingModel/ParameterEstimation/: Targets.py
ConchingModel/src/ConchingModel/PropertyLib/: mol_mass.py  part_coeff_lib.py  part_coeff_lib_buhlersim.py  part_coeffs_buhler_gpr.py
ConchingModel/src/ConchingModel/Tools/: extract_buhler_data.py  extract_lib.py
ConchingModel/src/ConchingModel/Visualizations/: timeseries.py
ConchingModel/tests/: test_AnalysisLib.py  test_ConcheClass.py  test_DataLoaders.py  test_Data_DataClass.py  test_DifferentiationModules.py  test_Experiment_DataClass.py  test_OptimizerClass.py  test_Timeseries.py  test_mbdoe.py
ConchingModel/tests/data/: K_out.csv  metafile_test.csv
ConchingModel/tests/data/FromJson/: test.json  test2.json
ConchingModel/tests/data/FromPostCalc/: cb.xlsx  cp.xlsx
ConchingModel/tests/data/FromRaw/: cb.xlsx  pp.xlsx
ConchingModel/tests/data/PostCalc/: cb.xlsx  cp.xlsx
ConchingModel/tests/data/cb_a/: metafile.txt
ConchingModel/tests/data/farinograph_cb_sp_franziska/: metafile.txt
