[metadata]
name = ConchingModel
version = 0.9
author = Philip Schmid
author_email = philip.schmid@tum.de
description = Package for planning and modeling conching processes
classifiers = 
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.9

[options.packages.find]
where = src